tests/baselines/reference/superAccess2.errors.txt
==== tests/cases/compiler/superAccess2.ts (9 errors) ====
    class P {
        x() { }
        static y() { }
    }
    
    class Q extends P {
        xx = super;
                  ~
!!! superAccess2.ts(7,15): error TS1005: '.' expected.
        static yy = super; // error for static initializer accessing super
                         ~
!!! superAccess2.ts(8,22): error TS1005: '.' expected.
    
        // Super is not allowed in constructor args
        constructor(public z = super, zz = super, zzz = () => super) {
                                    ~
!!! superAccess2.ts(11,33): error TS1005: '.' expected.
                                                ~
!!! superAccess2.ts(11,45): error TS1005: '.' expected.
                                                                   ~
!!! superAccess2.ts(11,64): error TS1005: '.' expected.
            super();
        }
    
        foo(zz = super) {
                      ~
!!! superAccess2.ts(15,19): error TS1005: '.' expected.
            super.x();
            super.y(); // error
                  ~
!!! superAccess2.ts(17,15): error TS2094: The property 'y' does not exist on value of type 'P'.
        }
    
        static bar(zz = super) {
                             ~
!!! superAccess2.ts(20,26): error TS1005: '.' expected.
            super.x(); // error
                  ~
!!! superAccess2.ts(21,15): error TS2094: The property 'x' does not exist on value of type 'typeof P'.
            super.y();
        }
    }